Fix: 100vh not working correctly on mobile device.

--- a/sources/css/root.css
+++ b/sources/css/root.css
@@ -42,6 +42,7 @@
 
     --header-height: 56.8px;
     --footer-height: 0px;
+    --100vh: 100vh;
 }
 
 * {
@@ -52,7 +53,7 @@
 
 html {
     width: 100vw;
-    height: 100vh;
+    height: var(--100vh);
     max-width: 100%;
     overflow: var(--general-html-overflow);
     color: var(--general-text-color);
@@ -64,7 +65,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: var(--100vh);
 }
 
 input,
