--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -12,10 +12,11 @@
 #root {
     position: relative;
     display: flex;
+    flex-grow: 1;
     flex-direction: column;
     width: 100%;
     height: 100%;
-    min-height: 100vh;
+    min-height: var(--100vh);
     z-index: 1;
 }
 
